--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-click-outside",
+  "name": "react-click-outside-component",
   "version": "1.1.0",
   "description": "ClickOutside component for React",
   "keywords": [
